# Snake

./: .env.example  .gitignore  README.md  cover_letter_job_4.md  profile.json  pyproject.toml
scripts/: fetch_all_descriptions.py  ingest_initial_jobs.py  save_job_desc.py
src/jobforge/: cli.py
src/jobforge/application/: helper.py
src/jobforge/core/: config.py
src/jobforge/db/: models.py  session.py
src/jobforge/search/: engine.py  matcher.py  scraper.py
tests/: test_engine.py
