[project]
name = "jobforge"
version = "0.1.0"
description = "Job Search Automation System"
requires-python = ">=3.11"
dependencies = [
    "requests",
    "beautifulsoup4",
    "pydantic",
    "pydantic-settings",
    "rich",
    "python-dotenv",
    "playwright",
    "sqlalchemy",
    "click",
]

[project.scripts]
jobforge = "jobforge.cli:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
